# VastseaBackendServer

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  appveyor.yaml  build.rs  icon.rc  readme.md
.github/workflows/: build-pr.yml  build.yml  cargo-check.yml  docker-image.yml  release.yml  rust.yml
src/: config.rs  main.rs
src/api/: ban.rs  bind.rs  key.rs  luck.rs  mod.rs
src/bot/: ban.rs  bind.rs  key.rs  mod.rs
src/command/: api_key.rs  mod.rs
src/github/: mod.rs
src/news/: mod.rs  news_file.rs
src/survey/: mod.rs  start.rs
src/user/: bind.rs  email.rs  info.rs  login.rs  microsoft.rs  minecraft.rs  mod.rs  readme.md  register.rs  xbox.rs
src/utils/: uuid.rs
