[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.8"
actix-web = { version = "4.2.1", features = ["rustls"] }
serde_json = "1.0.91"
serde = "1.0.152"
simple-log = "1.5.1"
mongodb = "2.4.0"
chrono = "0.4.23"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
lazy_static = "1.4.0"
base64 = "0.21.0"
jwt-simple = "0.11.2"
shadow-rs = "0.20.0"
urlencoding = "2.1.2"
hyper = { version = "0.14.23", features = ["full"] }
regex = "1.7.1"
hyper-tls = "0.5.0"
pcre2 = "0.2.3"
url_encoded_data = "0.6.1"
rustls-pemfile = "1.0.2"
tokio = { version = "1.26.0", features = ["full"] }
bson = { version = "2", features = ["chrono-0_4"] }
futures-util = "0.3.26"
prettytable-rs = "0.10.0"

[build-dependencies]
embed-resource = "1.8.0"
shadow-rs = "0.20.0"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"
