[package]
name = "backend_server"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.8"
actix-web = { version = "4.4.0", features = ["rustls"] }
serde_json = "1.0.107"
serde = "1.0.189"
simple-log = "1.6.0"
mongodb = "2.7.0"
chrono = "0.4.31"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
lazy_static = "1.4.0"
base64 = "0.21.4"
jwt-simple = "0.11.2"
shadow-rs = "0.24.1"
urlencoding = "2.1.2"
hyper = { version = "0.14.23", features = ["full"] }
regex = "1.10.2"
hyper-tls = "0.5.0"
pcre2 = "0.2.5"
url_encoded_data = "0.6.1"
rustls-pemfile = "1.0.2"
tokio = { version = "1.33.0", features = ["full"] }
bson = { version = "2.7.0", features = ["chrono-0_4"] }
futures-util = "0.3.28"
prettytable-rs = "0.10.0"
md-5 = "0.10.6"
serde-inline-default = "0.1.1"
toml = "0.8.2"
futures = "0.3.28"
amqprs = {version = "1.5.0", features = ["urispec", "tls"] }

[build-dependencies]
embed-resource = "2.4.0"
shadow-rs = "0.24.1"
